# modified-averaging

./: DEV.md  pyproject.toml
src/modified_averaging/: temp.py
