[project]
name = "modified-averaging"
version = "0.1.0"
description = ""
authors = [
    {name = "Trevor Garnett",email = "trevor.jgarnett@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "modified_averaging", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
